Fix: mobile hero visible

--- a/src/app/[locale]/components/hero/index.scss
+++ b/src/app/[locale]/components/hero/index.scss
@@ -65,5 +65,99 @@
   .image-container {
     width: 40%;
     margin-top: 5rem;
+    .img{
+      width: 700px;
+      height: 900px;
+    }
+  }
+}
+
+
+@media (max-width: 744px) {
+  .hero-design{
+    flex-direction: column;
+    height: 100vh;
+    .text{
+      margin: 0 auto;
+      font-size: 52px;
+      font-weight: 500;
+      text-transform: uppercase;
+      line-height: 1em;
+      margin-top: 5rem;
+      h4{
+        padding-left: 2rem;
+      }
+    }
+    .image-container {
+      width: 100%;
+      margin-top: 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .img{
+        width: 350px;
+        height: 500px;
+      }
+    }
+    .bottom-text{
+      width: 50%;
+      margin: 0 auto;
+      margin-top: 2rem;
+      .capital-letter{
+        font-weight: 500;
+        font-size: 52px;
+      }
+      p{
+        text-transform: uppercase;
+        font-size: 12px;
+        font-weight: 500;
+      }
+      .button-menu{
+        display: flex;
+        align-items: center;
+        width: max-content;
+        gap: .5rem;
+        margin-top: 1rem;
+        transition: gap 0.7s ease;
+        &:hover {
+          gap: 2rem;
+          cursor: pointer;
+        }
+        .menu{
+          width: max-content;
+          font-size: 32px;
+          font-weight: 500;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 390px) {
+  .hero-design{
+    height: 100%;
+    .text{
+      font-size: 48px;
+    }
+    .image-container {
+      width: 100%;
+      margin-top: 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .img{
+        width: 300px;
+        height: 450px;
+      }
+    }
+    .bottom-text{
+      width: 70%;
+      .capital-letter{
+        font-size: 48px;
+      }
+      .button-menu{
+        margin-bottom: 1rem;
+      }
+    }
   }
 }
