--- a/src/app/[locale]/page.scss
+++ b/src/app/[locale]/page.scss
@@ -7,3 +7,13 @@
         }
     }
 }
+
+@media (max-width: 744px) {
+    .home-design{
+        .hero-section{
+            .hero-visible{
+                height: 100%;
+            }
+        }
+    }
+}
